--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
+    <!--Linking Meterial UI Font-->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
